# patotinha-patotas

./: README.md
patotinha/johnny/: README.md  app.py  pyproject.toml
patotinha/johnny/instance/: patotinha.db
patotinha/johnny/static/css/: style.css
patotinha/johnny/templates/: explorar.html  home.html  login.html  patota_detalhe.html  patotas.html  registro.html
