[tool.poetry]
name = "patotinha"
version = "0.1.0"
description = "SOftware de Gerenciamento de Patotas"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.3"
sqlalchemy = "^2.0.50"
flask-wtf = "^1.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
